<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg1" />
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="26dp"
        android:textColor="@color/colorTextIcons"
        android:layout_marginRight="26dp" />

    <EditText
        android:id="@+id/novelEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/readingListButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryLight"
        android:hint="Enter book title"
        android:padding="5dp" />

    <Button
        android:id="@+id/readingListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/faster_one"
        android:text="CREATE READING LIST"
        android:textColor="@color/colorTextIcons"
        android:textSize="20sp" />
</RelativeLayout>